--- a/project/public_html/css/style.css
+++ b/project/public_html/css/style.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+  font-size: 100%;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
@@ -6,18 +14,38 @@ html {
 
 body {
   background-color: #2f3033;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   padding: 1rem 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+main section {
+  flex-grow: 1;
 }
 
 section {
   background-color: #f7f7f7;
   margin: 0 auto;
   max-width: 80rem;
-  padding: 1rem 0 0;
-  text-align: center;
+  padding: 1rem 1rem 0;
+  width: 100%;
+}
+
+.section__inner {
+  margin: 0 auto;
+  width: 50%;
 }
 
 footer section {
+  background-color: #606166;
+  color: #ffffff;
   padding-bottom: 1rem;
 }
 
@@ -30,18 +58,38 @@ h2 {
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 500;
-  margin-top: 0.25rem;
+  margin-top: 0.5rem;
 }
 
 img {
   display: block;
   height: auto;
-  margin: 0 auto;
-  width: 50%;
+  width: 100%;
+}
+
+ul {
+  list-style-position: outside;
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+li + li {
+  margin-top: 0.25rem;
+}
+
+a {
+  border-bottom: solid 1px transparent;
+  color: #ff0000;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+a:hover {
+  border-bottom-color: #ff0000;
 }
 
 @media screen and (max-width: 72rem) {
-  img {
+  .section__inner {
     width: 100%;
   }
 }
