--- a/project/public_html/css/style.css
+++ b/project/public_html/css/style.css
@@ -43,6 +43,10 @@ section {
   width: 50%;
 }
 
+main section {
+  padding-bottom: 1rem;
+}
+
 footer section {
   background-color: #606166;
   color: #ffffff;
@@ -59,6 +63,10 @@ h2 {
   font-style: italic;
   font-weight: 500;
   margin-top: 0.5rem;
+}
+
+h3 {
+  font-weight: 500;
 }
 
 img {
